[gd_scene load_steps=8 format=3 uid="uid://bq62o66cmwg2y"]

[ext_resource type="Script" path="res://scripts/remove_entry.gd" id="1_rwkhg"]
[ext_resource type="FontFile" uid="uid://dlbghev4ongqy" path="res://assets/Fonts/LuckiestGuy-Regular.ttf" id="1_w7tqq"]
[ext_resource type="Texture2D" uid="uid://cbwmea3bae8t3" path="res://assets/ui/panel_beige.png" id="2_3moeh"]
[ext_resource type="LabelSettings" uid="uid://ugp816oeclr8" path="res://assets/Fonts/MainSceneLabels.tres" id="4_8ck0n"]

[sub_resource type="LabelSettings" id="LabelSettings_kxepd"]
font = ExtResource("1_w7tqq")
font_size = 72
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_28jji"]
font = ExtResource("1_w7tqq")
font_size = 72
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rwqt7"]
font = ExtResource("1_w7tqq")
font_size = 72
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[node name="remove_entry" type="Node2D"]
script = ExtResource("1_rwkhg")

[node name="mainLabel" type="Label" parent="."]
offset_left = 104.0
offset_top = 46.0
offset_right = 624.0
offset_bottom = 119.0
scale = Vector2(0.680788, 1.18638)
text = "remove Entry!"
label_settings = SubResource("LabelSettings_kxepd")

[node name="RemoveButton" type="TextureButton" parent="."]
offset_left = 309.0
offset_top = 878.0
offset_right = 409.0
offset_bottom = 978.0
scale = Vector2(1.48912, 0.660217)
texture_normal = ExtResource("2_3moeh")

[node name="RemoveLabel" type="Label" parent="RemoveButton"]
layout_mode = 0
offset_left = 10.0731
offset_top = 25.7491
offset_right = 339.073
offset_bottom = 98.7491
scale = Vector2(0.261355, 0.795908)
text = "Remove!"
label_settings = SubResource("LabelSettings_28jji")

[node name="BackToMainButton" type="TextureButton" parent="."]
offset_left = 97.0
offset_top = 876.0
offset_right = 197.0
offset_bottom = 976.0
scale = Vector2(1.48912, 0.660217)
texture_normal = ExtResource("2_3moeh")

[node name="BackLabel" type="Label" parent="BackToMainButton"]
layout_mode = 0
offset_left = 7.38689
offset_top = 25.7491
offset_right = 336.387
offset_bottom = 98.7491
scale = Vector2(0.261355, 0.795908)
text = "Back"
label_settings = SubResource("LabelSettings_rwqt7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ListOfEntries" type="ScrollContainer" parent="."]
offset_left = 38.0
offset_top = 296.0
offset_right = 516.0
offset_bottom = 828.0
horizontal_scroll_mode = 0

[node name="VBoxEntries" type="VBoxContainer" parent="ListOfEntries"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="nameLabel" type="Label" parent="."]
offset_left = 5.0
offset_top = 163.0
offset_right = 220.0
offset_bottom = 238.0
text = "Product:"
label_settings = ExtResource("4_8ck0n")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProductName" type="LineEdit" parent="nameLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.481
anchor_right = 1.481
anchor_bottom = 0.013
offset_left = -105.415
offset_top = -1.0
offset_right = 221.585
offset_bottom = 62.025
theme_override_fonts/font = ExtResource("1_w7tqq")
theme_override_font_sizes/font_size = 35
placeholder_text = "Name of product..."
alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="nameLabel"]
visible = false
layout_mode = 0
offset_left = 12.0
offset_top = 65.0
offset_right = 537.0
offset_bottom = 386.0
horizontal_scroll_mode = 0

[node name="VboxProduct" type="VBoxContainer" parent="nameLabel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="BackToMainButton" to="." method="_on_back_to_main_button_pressed"]
[connection signal="text_changed" from="nameLabel/ProductName" to="." method="_on_product_name_text_changed"]
[connection signal="text_submitted" from="nameLabel/ProductName" to="." method="_on_product_name_text_submitted"]
